--- a/.github/workflows/make-epub.yml
+++ b/.github/workflows/make-epub.yml
@@ -35,25 +35,25 @@ jobs:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto songshu.epub gdrive:/Ancient-China-Books/宋書.epub
+          args: copyto songshu.epub gdrive:/古籍共享电子书计划/宋書.epub
       - name: Sync vst to Google drive
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto songshu-vst.epub gdrive:/Ancient-China-Books/宋書-豎排.epub
+          args: copyto songshu-vst.epub gdrive:/古籍共享电子书计划/宋書-豎排.epub
       - name: Sync to Freemdict
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto songshu.epub freemdict:/Ancient-China-Books/宋書.epub
+          args: copyto songshu.epub freemdict:/古籍共享电子书计划/宋書.epub
       - name: Sync vst to Freemdict
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto songshu-vst.epub freemdict:/Ancient-China-Books/宋書-豎排.epub
+          args: copyto songshu-vst.epub freemdict:/古籍共享电子书计划/宋書-豎排.epub
